# SciBatt

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs.yml  python-app.yml
scibatt/: __init__.py  config.py
scibatt/filters/: cycling.py  galvanostatic.py
scibatt/plotters/: galvanostatic.py
scibatt/readers/: biologic.py  gamry.py  maccor.py
tests/readers/: test_biologic.py  test_gamry.py  test_maccor.py
tests/readers/test_data/: gamry.DTA  maccor.csv
