[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SciBatt"
version = "0.0.1"
authors = [
  { name="Amund Raniseth", email="amund.raniseth@gmail.com" },
]
description = "Read, filter and plot electrochemical data."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/amundmr/scibatt"
Issues = "https://github.com/amundmr/scibatt/issues"